test/libsolidity/syntaxTests/inheritance/override/implement_public_function_by_public_variable.sol
contract X { function test() public returns (uint256); }
contract Y is X {
    uint256 public test = 42;
}
contract T {
    constructor() public { new Y(); }
}
// ----
// DeclarationError: (79-103): Identifier already declared.
